# trends.earth-algorithms

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pavement.py  pyproject.toml  setup.cfg  setup.py  tasks.py  version.json  version.txt
.github/: copilot-instructions.md
.github/workflows/: black.yaml  ruff.yaml  test.yaml
docs/source/: conf.py  index.rst  requirements.txt
docs/source/algorithms/: index.rst
docs/source/api/: index.rst  te_algorithms.api.rst  te_algorithms.gdal.land_deg.rst  te_algorithms.gdal.rst  te_algorithms.gee.rst  te_algorithms.rst
docs/source/api/api/: index.rst  util.rst
docs/source/api/common/: index.rst  soc.rst
docs/source/api/gdal/: drought.rst  drought_numba.rst  index.rst  util.rst  util_numba.rst  workers.rst
docs/source/api/gdal/land_deg/: config.rst  index.rst  land_deg.rst  land_deg_numba.rst  land_deg_progress.rst  land_deg_recode.rst  land_deg_report.rst  land_deg_stats.rst  models.rst  worker.rst
docs/source/api/gee/: carbon.rst  download.rst  index.rst  land_cover.rst  preproc.rst  productivity.rst  soc.rst  stats.rst  urban_area.rst  util.rst
gee/: land_cover.py  preproc.py  stats.py
landdegradation/: __init__.py  carbon.py  download.py  land_cover.py  preproc.py  productivity.py  schemas.py  soc.py  stats.py  trends.py  urban_area.py  util.py
te_algorithms/: __init__.py  version.json
te_algorithms/api/: util.py
te_algorithms/common/: band_names.py  soc.py
te_algorithms/data/: summary_table_drought.xlsx  summary_table_ld_sdg.xlsx
te_algorithms/gdal/: __init__.py  drought.py  drought_numba.py  ldn.py  util.py  util_numba.py  workers.py  xl.py
te_algorithms/gdal/land_deg/: config.py  counterbalancing.py  counterbalancing_numba.py  counterbalancing_report.py  land_deg.py  land_deg_numba.py  land_deg_progress.py  land_deg_recode.py  land_deg_report.py  land_deg_stats.py  landdeg_stats.py  models.py  worker.py
te_algorithms/gee/: __init__.py  carbon.py  download.py  land_cover.py  preproc.py  productivity.py  soc.py  stats.py  urban_area.py  util.py
te_algorithms/openeo/: __init__.py  soc.py  util.py
tests/: test_gdal_config.py  test_gdal_drought_numba.py  test_gdal_integration.py  test_gdal_land_deg_numba.py  test_gdal_land_deg_recode.py  test_gdal_land_deg_reporting.py  test_gdal_land_deg_resolution.py  test_gdal_land_deg_stats.py  test_gdal_util_numba.py  test_gee_download.py  test_gee_errors.py  test_gee_functions.py  test_gee_productivity_functions.py  test_gee_stats.py  test_gee_util.py  test_marshmallow_compat.py
tests/data/: RasterResults_sdg-15-3-1-sub-indicators_1.json  RasterResults_sdg-15-3-1-sub-indicators_2.json  RasterResults_sdg-15-3-1-sub-indicators_3.json  parameters_sdg-15-3-1-sub-indicators_baseline_te.json
