[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "te_algorithms"
description = "Library supporting analysis of land degradation."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Conservation International", email = "trends.earth@conservation.org"}
]
keywords = ["land degradation", "LDN", "SDG", "sustainable development goals"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "openpyxl>=3.1.3",
    "backoff>=2.1.0",
    "marshmallow>=3.21.3,<4.0.0",
    "marshmallow-dataclass>=8.7.1",
    "defusedxml>=0.7.1",
    "te_schemas @ git+https://github.com/ConservationInternational/trends.earth-schemas.git",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ConservationInternational/trends.earth-algorithms"
Repository = "https://github.com/ConservationInternational/trends.earth-algorithms"

[project.optional-dependencies]
api = ["boto3>=1.16", "GDAL>=3.0.0"]
gee = ["earthengine-api==0.1.232"]
gdal = ["GDAL>=3.0.0", "numpy>=1.17.0"]
numba = ["numba>=0.54.1"]
dev = ["check-manifest"]
test = ["coverage", "pytest"]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.setuptools]
packages = [
    "te_algorithms",
    "te_algorithms.common",
    "te_algorithms.gdal.land_deg",
    "te_algorithms.gdal",
    "te_algorithms.gee",
    "te_algorithms.api",
]
package-dir = {"te_algorithms" = "te_algorithms"}
include-package-data = true

[tool.setuptools.package-data]
te_algorithms = ["version.json", "data/*"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}
